Added UI extension